--- a/src/index.css
+++ b/src/index.css
@@ -19,29 +19,33 @@ body,
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
+  font-family: inherit;
+  font-size: inherit;
   hyphens: auto;
+  line-height: inherit;
   margin: 0;
-  margin: 0;
+  outline: 0;
   overflow-wrap: break-word;
-  padding: 0;
   padding: 0;
   position: relative;
   text-align: left;
   text-decoration: none;
+  white-space: normal;
   word-wrap: break-word;
 }
 .views-text {
   box-sizing: border-box;
   hyphens: auto;
+  outline: 0;
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
 .views-capture {
-  background-color: transparent;
   box-sizing: border-box;
   border-radius: 0;
   border: 0;
   hyphens: auto;
+  outline: 0;
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
